# fooyin-bandcamp

./: .gitignore  CMakeLists.txt  README.md
src/: bandcamp.json.in  bandcampdialog.cpp  bandcampdialog.h  bandcampfetcher.cpp  bandcampfetcher.h  bandcampinput.cpp  bandcampinput.h  bandcampplugin.cpp  bandcampplugin.h
